--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
     </dependencies>
 
     <build>
+        <finalName>crm</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
