--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,13 +1,38 @@
 spring:
-  datasource:
-    url: jdbc:mysql://39.108.223.136:3306/crm?useSSL=false&charsetEncoding=utf-8
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: aa111111
   redis:
     port: 6379
     url: 39.108.223.136
     password: aa111111
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    #druid相关配置
+    druid:
+      #监控统计拦截的filters
+      filters: stat
+      driver-class-name: com.mysql.jdbc.Driver
+      #基本属性
+      url: jdbc:mysql://39.108.223.136:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+      username: root
+      password: aa111111
+      #配置初始化大小/最小/最大
+      initial-size: 1
+      min-idle: 1
+      max-active: 20
+      #获取连接等待超时时间
+      max-wait: 60000
+      #间隔多久进行一次检测，检测需要关闭的空闲连接
+      time-between-eviction-runs-millis: 60000
+      #一个连接在池中最小生存的时间
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 'x'
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
+      pool-prepared-statements: false
+      max-pool-prepared-statement-per-connection-size: 20
 logging:
-  pattern:
-    console: "%d    %msg%n"
+  level:
+    cn.luischen.dao : DEBUG
+#  pattern:
+#    console: "%d    %msg%n"
