--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,6 +31,11 @@ spring:
       #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
       pool-prepared-statements: false
       max-pool-prepared-statement-per-connection-size: 20
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10Mb
+      max-request-size: 50Mb
 logging:
   level:
     com.ipaozha.crm.dao : DEBUG
@@ -44,5 +49,11 @@ pagehelper:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 
+
+web:
+  upload:
+    user-icon: /Users/suyikun/Source/crm-upload/user-icon
+    product-img: /Users/suyikun/Source/crm-upload/product-img
+    category-img: /Users/suyikun/Source/crm-upload/category-img
 #  pattern:
 #    console: "%d    %msg%n"
