--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -50,6 +50,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 
 
+web-upload: /home/upload
 web:
   upload:
     user-icon: /home/upload/user-icon
