--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -50,6 +50,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 
 
+base-upload-path: http://www.ipaozha.com:8888/upload
 web:
   upload: /home/upload
 user-icon: /user-icon
