--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,6 +36,8 @@ spring:
       enabled: true
       max-file-size: 10Mb
       max-request-size: 50Mb
+  freemarker:
+    request-context-attribute: request
 logging:
   level:
     com.ipaozha.crm.dao : DEBUG
@@ -57,5 +59,6 @@ web:
 user-icon: /user-icon
 article-img: /article-img
 category-img: /category-img
+
 #  pattern:
 #    console: "%d    %msg%n"
