--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,10 +1,11 @@
 db.driverLocation=/Users/suyikun/Source/apache-maven-reposity/mysql/mysql-connector-java/5.1.47/mysql-connector-java-5.1.47.jar
 db.driverClassName=com.mysql.jdbc.Driver
 
-db.url=jdbc:mysql://39.108.223.136:3306/crm?characterEncoding=utf-8&useSSL=false
+#db.url=jdbc:mysql://39.108.223.136:3306/crm?characterEncoding=utf-8&useSSL=false
+db.url=jdbc:mysql://localhost:3306/crm?characterEncoding=utf-8&useSSL=false
 #db.url=jdbc:mysql://你的数据库IP:你的数据库Port/你的database?characterEncoding=utf-8
 db.username=root
-db.password=aa111111
+db.password=123456
 
 
 db.initialSize=20
